language/move-lang/tests/move_check/naming/vector_literal_type_arity.exp
error[E03008]: too few type arguments
  ┌─ tests/move_check/naming/vector_literal_type_arity.move:4:18
  │
4 │         let v0 = vector<>[];
  │                  ^^^^^^----
  │                  │
  │                  Expected 1 type argument(s) but got 0
  │                  Invalid 'vector' instantation

error[E03007]: too many type arguments
  ┌─ tests/move_check/naming/vector_literal_type_arity.move:5:18
  │
5 │         let v2 = vector<u64, bool>[0, false];
  │                  ^^^^^^---------------------
  │                  │
  │                  Expected 1 type argument(s) but got 2
  │                  Invalid 'vector' instantation

error[E04007]: incompatible types
  ┌─ tests/move_check/naming/vector_literal_type_arity.move:5:18
  │
5 │         let v2 = vector<u64, bool>[0, false];
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                  │                 │  │
  │                  │                 │  Found: 'bool'. It is not compatible with the other type.
  │                  │                 Found: integer. It is not compatible with the other type.
  │                  Invalid 'vector' instantiation. Incompatible argument

